[package]
name = "linear_regression"
version = "0.1.0"
authors = ["LukeMathWalker"]
edition = "2018"
workspace = ".."

[features]
default = []
openblas = ["ndarray-linalg/openblas"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
netlib = ["ndarray-linalg/netlib"]

[dependencies]
ndarray = {version = "0.13", features = ["blas"]}
ndarray-linalg = {version = "0.12", optional = true, default-features = false}
ndarray-stats = "0.3"
ndarray-rand = "0.11"
rand = "0.7"
