[package]
name = "svm"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.13"}
ndarray-stats = "0.3"
ndarray-rand = "0.11"
rand = "0.7"
